# health-ingest

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: release.yaml
src/: main.rs  state.rs
